update file html

--- a/index.html
+++ b/index.html
@@ -310,6 +310,9 @@
         <span class="modal-close" id="modalClose">&times;</span>
         <img class="modal-content" id="modalImage">
     </div>
+<footer>
+    <p style="margin-top: 20px;">Developed by Huỳnh Minh Thiện.</p>
+</footer>
 
     <script>
         // Tạo hiệu ứng chuyển động cho tiêu đề
