update file html lan 2

--- a/index.html
+++ b/index.html
@@ -440,11 +440,11 @@
         function createSamplePhotos() {
             const gallery = document.getElementById('photoGallery');
             const photos = [
-                { src: 'images/sinhnhat1.jpg', caption: 'Kỷ niệm đáng nhớ' },
-                { src: 'images/sinhnhat2.jpg', caption: 'Ngày vui bên bạn bè' },
-                { src: 'images/sinhnhat3.jpg', caption: 'Những nụ cười rạng rỡ' },
-                { src: 'images/sinhnhat4.jpg', caption: 'Khoảnh khắc hạnh phúc' },
-                { src: 'images/sinhnhat5.jpg', caption: 'Những người bạn tuyệt vời' }
+                { src: 'images/sinhnhat1.jpg', caption: 'Chị Đào xinh đẹp' },
+                { src: 'images/sinhnhat2.jpg', caption: 'Chị Đào xinh đẹp' },
+                { src: 'images/sinhnhat3.jpg', caption: 'Chị Đào xinh đẹp' },
+                { src: 'images/sinhnhat4.jpg', caption: 'Chị Đào xinh đẹp' },
+                { src: 'images/sinhnhat5.jpg', caption: 'Chị Đào xinh đẹp' }
             ];
             
             photos.forEach(photo => {
