update file index lan 4

--- a/index.html
+++ b/index.html
@@ -597,6 +597,11 @@
             }
         }, 2000);
     
+        // âm thanh
+        document.getElementById('celebrateButton').addEventListener('click', function() {
+            document.getElementById('birthdaySong').play();
+        });
+
     </script>
 </body>
 </html>
